Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-32774

QSerialPortInfo does not find all ports on windows

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P4: Low P4: Low
    • 5.3.0
    • 5.1.0
    • Serial Port
    • None
    • Windows 7
    • e08cc29223aeab7da216963ae80d619f387109b9

      QSerialPortInfo uses a hard wired list of class ids to find the ports from the device driver list. So it can only find a limited set of the large set of serial port implementations available in windows. For example it will not find virtual ports of the virtual null modem of agg software (http://www.virtual-null-modem.com/).

      Attached you can find the more robust function I use in my old own serial port implementation to find the ports. It should work with all existing and future serial port implementations.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kuzulis Denis Shienkov
            acenes Acenes
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes